# Sensorium

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/input/: action.hpp  input_manager.cpp  input_manager.hpp
src/simulation/reception/: thermoreceptor.cpp  thermoreceptor.hpp  thermoreceptor_factory.cpp  thermoreceptor_factory.hpp
